# service-ask-marc

./: .env.example  Dockerfile  LICENSE  README.md  package-lock.json  pyproject.toml
app/: __init__.py  chat.py  config.py  cors.py  openremote_service.py
app/mcp_api/: __init__.py
app/mcp_api/services/: __init__.py  asset.py  asset_model.py  realm.py  rule.py
service/: __init__.py  config.py  cors.py
services/: __init__.py  openremote.py
static/: index.html
ui/: package-lock.json  package.json
ui/src/: App.vue  components.d.ts
ui/src/components/: ChatView.vue  MessageBox.vue  MessageView.vue  ModelSelector.vue  PromptBox.vue
ui/src/components/MessageView/: SystemMessage.vue  index.vue
ui/src/stores/: activeChat.ts
ui/src/types/: chat.ts
