[project]
name = "service-ask-marc"
version = "0.1.0"
description = "A bridge for OpenRemote to communicate with AI models like ChatGPT or Claude. And provide configuration to connect them to tools using MCP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.38.0",
]
